--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "io.realm:realm-gradle-plugin:2.2.0"
+
 
 
         // NOTE: Do not place your application dependencies here; they belong
