--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+### Android template
 # Built application files
 *.apk
 *.ap_
@@ -35,16 +37,28 @@ captures/
 # Intellij
 *.iml
 .idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/dictionaries
+.idea/libraries
 
 # Keystore files
 *.jks
 
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
+# External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Freeline
+freeline.py
+freeline/
+freeline_project_description.json
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+out
+gen
